--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
   - JEKYLL_ENV=production bundle exec jekyll build --destination site
 deploy:
-  repo: ergulburak/blog-dash
+  repo: ergulburak/ergulburak.github.io
   provider: pages
   local-dir: ./site
   target-branch: master
