--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ deploy:
   github-token: $GITHUB_TOKEN
   api_key: $GITHUB_TOKEN
   keep-history: true
+  target_branch: master
   on:
-    branch: main
+    branch: master
